--- a/styles.css
+++ b/styles.css
@@ -24,8 +24,8 @@ body {
 }
 
 .container {
-    border: 2px solid transparent; /* Borde transparente */
-    padding: 20px;
+    border: 20px solid transparent; /* Borde transparente */
+    padding: 35px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     text-align: center;
     position: absolute;
@@ -45,7 +45,7 @@ body {
 }
 
 .login-box h1 {
-    color: #ff0000;
+    color: #030303;
 }
 
 .form-group {
@@ -69,7 +69,7 @@ input {
 }
 
 button {
-    background-color: #ff0000;
+    background-color: #000000;
     color: #fff;
     border: none;
     padding: 10px 20px;
@@ -77,22 +77,7 @@ button {
     cursor: pointer;
 }
 
-.snowflake {
-    position: absolute;
-    top: -10px;
-    user-select: none;
-    pointer-events: none;
-    z-index: 1;
-}
 
-/* Efecto de nieve */
-.snowflake::before {
-    content: "❆";
-    position: absolute;
-    color: #fff;
-    font-size: 50px;
-    animation: falling 5s linear infinite;
-}
 
 @keyframes falling {
     0%, 100% {
